--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  color: blue;
 }
 
 .App-logo {
@@ -10,13 +11,20 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.search{
+  flex-direction: column;
+  justify-content: right;
 }
 
 .App-link {
